# analytics-stack

./: .gitignore  DOCKER.md  README.md  compose.yaml
backend/: .dockerignore  .env.docker  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: database.py  duckdb_service.py  main.py  models.py  schemas.py
backend/app/api/: analytics.py  duckdb.py
frontend/: .dockerignore  Dockerfile  README.md  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.jsx  App.tsx
frontend/src/components/: EventForm.css  EventForm.jsx  EventForm.tsx  EventList.css  EventList.jsx  EventList.tsx  QueryPanel.css  QueryPanel.tsx
frontend/src/services/: api.js  api.ts  duckdb.ts  duckdbApi.ts  sqljs.ts
