[project]
name = "analytics-stack-backend"
version = "0.1.0"
description = "FastAPI backend application with SQLAlchemy ORM and DuckDB integration"
authors = [
    {name = "Analytics Stack Team"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "fastapi (==0.104.1)",
    "uvicorn[standard] (==0.24.0)",
    "sqlalchemy (==2.0.23)",
    "pydantic (==2.5.0)",
    "pydantic-settings (==2.1.0)",
    "python-dotenv (==1.0.0)",
    "duckdb (==1.1.3)",
    "psycopg2-binary (==2.9.9)",
    "asyncpg (==0.29.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
